# Arcade

./: .gitignore  CMakeLists.txt  README.md  scores.txt  test_parser.cpp
docs/: CMakeLists.txt  HowToImplementThings.md  UMLGraph.py
src/: CMakeLists.txt  main.cpp  main.hpp  test_main.cpp
src/Core/: CMakeLists.txt  core.cpp  core.hpp  main.cpp
src/Core/DLLoader/: DLLoader.cpp  DLLoader.hpp  DLLoader.tpp
src/Core/DLoader/: DLoader.cpp  DLoader.hpp
src/Core/EventManager/: EventManager.cpp  EventManager.hpp
src/Core/Exception/: ArcadeException.cpp  ArcadeException.hpp
src/Core/Exceptions/: ArcadeException.cpp  ArcadeException.hpp  Exception.cpp  Exception.hpp
src/Core/GameLoop/: GameLoop.cpp  GameLoop.hpp  GameLoopUtils.cpp
src/Core/Menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
src/Core/Score/: ScoreManager.cpp  ScoreManager.hpp
src/Core/ScoreManager/: ScoreManager.cpp  ScoreManager.hpp
src/Core/Window/: Window.cpp  Window.hpp
src/DLLoader/: CMakeLists.txt  DLLoader.hpp
src/ECS/: CMakeLists.txt
src/ECS/Components/: ComponentManager.cpp  ComponentManager.hpp  PositionComponent.cpp  PositionComponent.hpp
src/ECS/Components/Drawable/: CMakeLists.txt  DrawableComponent.cpp  DrawableComponent.hpp
src/ECS/Components/Position/: CMakeLists.txt  PositionComponent.cpp  PositionComponent.hpp
src/ECS/Components/Sprite/: CMakeLists.txt  SpriteComponent.cpp  SpriteComponent.hpp
src/ECS/Components/Text/: CMakeLists.txt  TextComponent.cpp  TextComponent.hpp
src/ECS/Components/Velocity/: CMakeLists.txt  VelocityComponent.cpp  VelocityComponent.hpp
src/ECS/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/ECS/System/: SystemManager.cpp  SystemManager.hpp
src/ECS/System/Shared/: CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp
src/Games/: CMakeLists.txt
src/Games/Game1/: CMakeLists.txt  Game1.cpp  Game1.hpp
src/Games/Game2/: CMakeLists.txt  Game2.cpp  Game2.hpp
src/Games/Game3/: CMakeLists.txt  Game3.cpp  Game3.hpp
src/Games/Minesweeper/: Board.cpp  Board.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Minesweeper.cpp  Minesweeper.hpp  MinesweeperFactory.cpp  MinesweeperFactory.hpp
src/Games/Minesweeper/Components/: Board.cpp  Board.hpp  Bomb.hpp  Cell.hpp  GameStats.cpp  GameStats.hpp
src/Games/Minesweeper/System/: EventSubSystem.cpp  EventSubSystem.hpp  GameLogic.cpp  GameLogic.hpp  RenderSystem.cpp  RenderSystem.hpp  UISystem.cpp  UISystem.hpp
src/Games/PacMan/: CMakeLists.txt  Pacman.cpp  Pacman.hpp  PacmanFactory.cpp  PacmanFactory.hpp
src/Games/PacMan/Components/: FoodComponent.cpp  FoodComponent.hpp  GhostComponent.cpp  GhostComponent.hpp  GridComponent.cpp  GridComponent.hpp  PacmanComponent.cpp  PacmanComponent.hpp  PacmanStats.cpp  PacmanStats.hpp
src/Games/PacMan/System/: CollisionManager.cpp  CollisionManager.hpp  EventSubSystem.cpp  EventSubSystem.hpp  GameLogic.cpp  GameLogic.hpp  GameStateManager.cpp  GameStateManager.hpp  GhostLogic.cpp  GhostLogic.hpp  PlayerLogic.cpp  PlayerLogic.hpp  UISystem.cpp  UISystem.hpp
src/Games/PacMan/Utils/: AnimationDebugger.hpp
src/Games/Snake/: CMakeLists.txt  Snake.cpp  Snake.hpp  SnakeFactory.cpp  SnakeFactory.hpp  Types.hpp
src/Games/Snake/Components/: Board.hpp  Cell.hpp  Food.hpp  FoodComponent.cpp  FoodComponent.hpp  GameStats.hpp  GridComponent.cpp  GridComponent.hpp  Snake.cpp  Snake.hpp  SnakeHeadComponent.cpp  SnakeHeadComponent.hpp
src/Games/Snake/System/: CollisionSystem.cpp  CollisionSystem.hpp  EventSubSystem.cpp  EventSubSystem.hpp  EventSystem.cpp  EventSystem.hpp  GameLogic.cpp  GameLogic.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  UISystem.cpp  UISystem.hpp
src/Graphics/: CMakeLists.txt
src/Graphics/Allegro5/: Allegro5.cpp  Allegro5.hpp  Allegro5Color.hpp  Allegro5Keys.hpp  Allegro5Utils.cpp  CMakeLists.txt
src/Graphics/Allegro5/Allegro5Utils/: Allegro5Event.cpp  Allegro5Event.hpp  Allegro5Font.cpp  Allegro5Font.hpp  Allegro5Text.cpp  Allegro5Text.hpp  Allegro5Texture.cpp  Allegro5Texture.hpp  Allegro5Window.cpp  Allegro5Window.hpp
src/Graphics/GTK+/: CMakeLists.txt  GTK.cpp  GTK.hpp  GTKColor.hpp  GTKKeys.hpp  GTKUtils.cpp
src/Graphics/GTK+/GTKUtils/: GTKEvent.cpp  GTKEvent.hpp  GTKFont.cpp  GTKFont.hpp  GTKRenderer.cpp  GTKRenderer.hpp  GTKText.cpp  GTKText.hpp  GTKTexture.cpp  GTKTexture.hpp  GTKWindow.cpp  GTKWindow.hpp
src/Graphics/NCurses/: CMakeLists.txt  NCurses.cpp  NCurses.hpp  NCursesColor.cpp  NCursesColor.hpp  NCursesKeys.hpp  NCursesUtils.cpp
src/Graphics/OpenGL/: CMakeLists.txt  OpenGL.cpp  OpenGL.hpp  OpenGLColor.hpp  OpenGLKeys.cpp  OpenGLKeys.hpp
src/Graphics/Qt5/: CMakeLists.txt  Qt5.cpp  Qt5.hpp  Qt5Color.hpp  Qt5Keys.hpp  Qt5Utils.cpp
src/Graphics/SDL/: CMakeLists.txt  SDL.cpp  SDL.hpp  SDLColor.hpp  SDLKeys.hpp  SDLUtils.cpp
src/Graphics/SFML/: CMakeLists.txt  SFML.cpp  SFML.hpp  SFMLColor.hpp  SFMLKeys.hpp  SFMLUtils.cpp
src/Graphics/nCurses/: CMakeLists.txt  nCurses.cpp  nCurses.hpp
src/Shared/: CMakeLists.txt
src/Shared/Components/: Position.hpp  Sprite.hpp  Velocity.hpp
src/Shared/EventManager/: AEventManager.cpp  AEventManager.hpp
src/Shared/Exceptions/: ArcadeException.cpp  ArcadeException.hpp  Exceptions.hpp  GameException.hpp  GraphicsException.hpp  InputException.hpp  LibraryLoadException.hpp  ResourceException.hpp
src/Shared/Interface/: IArcadeModule.hpp  IDisplayModule.hpp  IEventManager.hpp  IException.hpp  IGameModule.hpp  IJSONParser.hpp  ISystem.hpp
src/Shared/JSONParser/: CMakeLists.txt  JSONParser.cpp  JSONParser.hpp  Tokenizer.cpp  Tokenizer.hpp
src/Shared/Models/: ColorType.hpp  ComponentType.hpp  EntityType.hpp  EventType.hpp  InputModel.hpp  KeysType.hpp  ModuleInfos.hpp  MouseButtonType.hpp
src/Shared/ScoreProvider/: CMakeLists.txt  ScoreProvider.cpp  ScoreProvider.hpp
src/Shared/System/: MovementSystem.cpp  MovementSystem.hpp
src/temp/: CMakeLists.txt  add.cpp  add.hpp
tests/: CMakeLists.txt  test.cpp
tests/Shared/Components/: PositionTest.cpp  SpriteTest.cpp  VelocityTest.cpp
(+69 files in other folders)
