add_subdirectory(SDL)
add_subdirectory(SFML)
add_subdirectory(NCurses)
add_subdirectory(Allegro5)
add_subdirectory(OpenGL)

if(ENABLE_BONUS)
    message(STATUS "Building bonus graphics libraries: GTK+ and Qt5")
    add_subdirectory(Qt5)
    add_subdirectory(GTK+)
else()
    message(STATUS "Skipping bonus graphics libraries (use -DENABLE_BONUS=ON to enable)")
endif()
