add_library(arcade_game2 SHARED Game2.cpp)

set_target_properties(arcade_game2 PROPERTIES PREFIX "" OUTPUT_NAME "arcade_game2")
target_include_directories(arcade_game2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
if(ENABLE_COVERAGE)
    target_compile_options(arcade_game2 PRIVATE -O0 -g --coverage -fprofile-arcs -ftest-coverage)
    target_link_libraries(arcade_game2 PRIVATE arcade_shared --coverage)
else ()
    target_link_libraries(arcade_game2 PRIVATE arcade_shared)
endif()
