add_library(arcade_game3 SHARED Game3.cpp)

set_target_properties(arcade_game3 PROPERTIES PREFIX "" OUTPUT_NAME "arcade_game3")
target_include_directories(arcade_game3 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
if(ENABLE_COVERAGE)
    target_compile_options(arcade_game3 PRIVATE -O0 -g --coverage -fprofile-arcs -ftest-coverage)
    target_link_libraries(arcade_game3 PRIVATE --coverage)
else ()
    target_link_libraries(arcade_game3 PRIVATE)
endif()
