add_library(arcade_drawable SHARED DrawableComponent.cpp)

set_target_properties(arcade_drawable PROPERTIES PREFIX "" OUTPUT_NAME "arcade_drawable")
target_include_directories(arcade_drawable PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../../../Shared/)
if(ENABLE_COVERAGE)
    target_compile_options(arcade_drawable PRIVATE -O0 -g --coverage -fprofile-arcs -ftest-coverage)
    target_link_libraries(arcade_drawable PRIVATE --coverage)
else ()
    target_link_libraries(arcade_drawable PRIVATE)
endif()