add_library(arcade_sprite SHARED SpriteComponent.cpp)

set_target_properties(arcade_sprite PROPERTIES PREFIX "" OUTPUT_NAME "arcade_sprite")
target_include_directories(arcade_sprite PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_SOURCE_DIR}/..)
if(ENABLE_COVERAGE)
    target_compile_options(arcade_sprite PRIVATE -O0 -g --coverage -fprofile-arcs -ftest-coverage)
    target_link_libraries(arcade_sprite PRIVATE arcade_event --coverage)
else ()
    target_link_libraries(arcade_sprite PRIVATE arcade_event)
endif()
